# sepe

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: build.yml
app/: .env  Dockerfile  api.py  pyproject.toml
app/data/: postal.json
app/src/: app.py  logs.py  schemas.py  smtp.py
ui/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
ui/src/api/: postal.tsx  subscription.tsx
ui/src/app/: globals.css  layout.tsx  page.tsx  step1.tsx  step2.tsx  step3.tsx
ui/src/components/: combobox.tsx  input.tsx  text.tsx  textarea.tsx
