[project]
name = "sepe-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Xabi Moreno",email = "xabi.moreno.maya@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "aiohttp (>=3.11.16,<4.0.0)",
    "cryptography (>=44.0.2,<45.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "aiosmtpd (>=1.4.6,<2.0.0)",
    "pip-system-certs (>=4.0,<5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
